{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 319,
  "lineage": "4af05ae2-319a-d33d-1d04-48f997fe09e1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/lab02s3-db1-u-vm1-nic",
            "internal_domain_name_suffix": "hs2rr1wawrmefl5riwtjt4k05h.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
              }
            ],
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "australiacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "22",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "australiacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3389",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5985",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "lab02s3-db1-u-vm1-dns",
            "fqdn": "lab02s3-db1-u-vm1-dns.australiacentral.cloudapp.azure.com",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/lab02s3-db1-u-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lab02s3-db1-u-vm1-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "name": "network-subnet1",
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "name": "network-subnet2",
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sgassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1",
            "network_security_group_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.secgroup1",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sgassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2",
            "network_security_group_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.secgroup2",
            "azurerm_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ee18b93c-b4c0-4258-aff1-45a699f95aff",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "australiacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          }
        }
      ]
    }
  ]
}